--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <title>Object Detection</title>
         <link rel="stylesheet" href="style.css">
+        <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
     </head>
     <body>
         <center>
