--- a/test2.html
+++ b/test2.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bedroom Detection</title>
+        <title>Television Detection</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
@@ -8,7 +8,7 @@
     </head>
     <body>
         <center>
-            <h1 class="btn btn-info heading">Object Detection - Bedroom</h1>
+            <h1 class="btn btn-info heading">Object Detection - Television</h1>
             <br>
             <h3 id="status" class="btn btn-danger"></h3>
             <br><br>
