--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <br><br>
             <button class="button" onclick="tv()">Television</button>
             <br><br>
-            <button class="button" onclick="desk()">Desk</button>
+            <button class="button" onclick="desk()">Chair</button>
             <br><br>
             <button class="button" onclick="bottles()">Bottles</button>
             <br><br>
